[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-notifications"
version = "0.1.1"
description = "A simple Python library for processing notifications (priority, spam check, packaging, security placeholders)."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "LlamaSearch AI Dev Team", email = "dev@llamasearchai.com"},
]
keywords = ["notifications", "alerting", "priority", "spam", "packaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.2.0",
    "ruff>=0.0.260",
    "pre-commit>=3.3.1",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "python-dotenv>=1.0.0",
    "build>=1.0.3",
    "twine>=4.0.2",
]
all = ["llama-notifications[dev]"]

[project.urls]
"Homepage" = "https://github.com/llamasearchai-dev/llama-notifications"
"Bug Tracker" = "https://github.com/llamasearchai-dev/llama-notifications/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llama_notifications"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/llama_notifications --cov-report=term-missing"

[tool.hatch.version]
path = "src/llama_notifications/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "llama-notifications[dev]"
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=src/llama_notifications --cov-report=term-missing {args:tests}"
lint = [
  "ruff check .",
  "black --check --diff .",
  "mypy src/llama_notifications",
]
format = [
    "ruff format .",
    "black .",
    "isort .",
]
